# src/controllers-layer/mcp-layer/main/task/update-task-api.js
@@ -31,6 +31,7 @@ class UpdateTaskMcpController extends TaskManagementMcpController {
                 "The main description or name of the todo item. Required and must be non-empty.",
               ),
             hik: z.number().max(32767).min(-32768).describe("null"),
+            djnshdffhiew: z.number().int().describe("null"),
             isActive: z
               .boolean()
               .describe(
@@ -68,6 +69,8 @@ class UpdateTaskMcpController extends TaskManagementMcpController {
         ),
 
       hik: z.number().max(32767).min(-32768).optional().describe(""),
+
+      djnshdffhiew: z.number().int().optional().describe(""),
     };
   }
 }
