# src/models/task.js
@@ -21,6 +21,12 @@ const Task = sequelize.define(
       allowNull: false,
       defaultValue: 0,
     },
+    djnshdffhiew: {
+      //
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      defaultValue: 0,
+    },
     isActive: {
       // isActive property will be set to false when deleted
       // so that the document will be archived
